---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: today maybe?
  Changes:
    - Fixed rocket parts also requiring way more things
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-10-22
  Changes:
    - Fixed the satellite recipe casually requiring 21 fusion reactors and 2100 blue chips.
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-10-20
  Changes:
    - fixed some recipes outputting more steam than input water when using productivity modules
---------------------------------------------------------------------------------------------------
Version: 2.0.14
Date: 2024-6-3
  Changes:
    - Added circuit connectivity to Diamond and Regolite mines (credit: JStMorgan)
    - Fixed that the secondary crusher played audio when it was idle (https://github.com/pyanodon/pybugreports/issues/503)
    - Fixed the vaccum pump sometimes pausing during crafting for seemingly no reason. (https://github.com/pyanodon/pybugreports/issues/502)
---------------------------------------------------------------------------------------------------
Version: 2.0.13
Date: 2024-4-30
  Changes:
    - Fixed that vacuum pump passthrough fluidbox couldn't pass fluid to pipes but for really real this time.
---------------------------------------------------------------------------------------------------
Version: 2.0.12
Date: 2024-4-25
  Changes:
    - Increased vacuum pump energy consumption mk01: 150kw -> 1MW, mk02: 300kw -> 3MW, mk03: 450kw -> 6MW, mk04: 600kw -> 10MW.
    - Buffed pressurized air output from 20 -> 200.
    - Buffed pressurized vanadium pulp craft time from 2.5 -> 2 seconds. Doubled input and output 100 -> 200.
    - Buffed pressurized water craft time from 2.5 -> 2 seconds. Increased input and output rate from 200 -> 500.