@@ -1,6 +1,6 @@
 {
   "name": "pyfusionenergy",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "factorio_version": "2.0",
   "title": "Pyanodons Fusion Energy",
   "author": "Pyanodon, Nexela, Kingarthur, notnotmelon, Mootykins, ShadowGlass, Archezekiel, Quintuple",
